--- a/games/2-matching/css/bundle.css
+++ b/games/2-matching/css/bundle.css
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: ComicSansBold;
+  src: local("Comic Sans Bold"), url(ComicSansBold.ttf);
+}
 html {
   height: 100%;
 }
@@ -6,6 +10,7 @@ body {
   padding: 0;
   height: 100%;
   background-color: #f1f2f3;
+  font-family: ComicSansBold;
 }
 .layout {
   min-width: 900px;
@@ -21,6 +26,10 @@ body {
   width: 100%;
   background-color: #7e425b;
   color: #fff;
+  text-shadow: 3px 3px 5px #000;
+  -webkit-text-shadow: 3px 3px 5px #000;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
 }
 #control-panel {
   display: inline-block;
@@ -40,6 +49,8 @@ body {
   background-color: #f1f2f3;
   border-bottom: 1px solid #e3e6e8;
   cursor: pointer;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
 }
 #control-panel .complexity-holder:hover:not(.current) {
   background-color: #e8ebec;
@@ -50,15 +61,29 @@ body {
 #control-panel .complexity-holder:last-of-type {
   border: none !important;
 }
+#control-panel #timer-holder {
+  overflow: hidden;
+}
+#control-panel #timer-holder img {
+  vertical-align: top;
+  padding: 10px 0;
+  height: 30px;
+  width: 30px;
+}
 #control-panel #timer {
+  vertical-align: top;
   text-align: center;
   padding: 10px;
+  font-size: 1.1em;
+  font-weight: bold;
+  overflow: hidden;
 }
 #control-panel #restart {
   text-align: center;
   padding: 10px;
   margin: 10px 0;
   background-color: #ffc1da;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
   cursor: pointer;
 }
 #control-panel #restart:hover {
@@ -66,7 +91,6 @@ body {
 }
 #gamefield {
   width: 100%;
-  border: 1px solid #d5d9dc;
   padding: 10px;
   max-width: 680px;
   display: inline-block;
