--- a/games/2-matching/css/bundle.css
+++ b/games/2-matching/css/bundle.css
@@ -15,7 +15,8 @@ body {
 .layout {
   min-width: 900px;
   width: 900px;
-  height: 100%;
+  min-height: 100%;
+  overflow: hidden;
   margin: 0 auto;
   padding: 10px 20px;
   background-color: #fff;
@@ -30,6 +31,26 @@ body {
   -webkit-text-shadow: 3px 3px 5px #000;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
   -webkit-box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
+}
+#state-panel {
+  overflow: hidden;
+  max-height: 0;
+  transition: max-height 350ms;
+}
+#state-panel div:first-child {
+  color: #5d3043;
+  font-weight: bold;
+  font-size: 1.2em;
+}
+#state-panel div#message-status {
+  font-size: 1em;
+  color: #7e425b;
+  opacity: 0.6px;
+}
+#state-panel div {
+  text-align: right;
+  width: 100%;
+  display: block;
 }
 #control-panel {
   display: inline-block;
@@ -95,6 +116,7 @@ body {
   max-width: 680px;
   display: inline-block;
   vertical-align: top;
+  overflow: auto;
 }
 #gamefield .tile-row {
   display: block;
@@ -128,4 +150,10 @@ body {
   transition-duration: 700ms;
   -webkit-transform: rotate3d(0, 1, 0, 180deg);
           transform: rotate3d(0, 1, 0, 180deg);
+}
+#gamefield img {
+  width: 76px;
+  height: 76px;
+  border: 2px solid #7e425b;
+  border-radius: 4px;
 }
